# graphic

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
asset/shader/: cube-shader.vs  grid.fs  grid.vs  lighting.fs  lighting.vs  shader.fs
glad/: glad.c
include/: Mesh.h  application.h  application.hpp  camera.h  camera.hpp  input.hpp  layout.h  layout.hpp  material.h  material.hpp  mesh.h  mesh.hpp  model.h  model.hpp  scene.h  scene.hpp  shader.h  stb_image.h  texture.h  transform.h  window.h  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: application.cpp  input.cpp  main.cpp  model.cpp  texture.cpp  window.cpp
